--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,600,700,700i|Montserrat:300,400,500,600,700" rel="stylesheet">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -34,5 +36,22 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!--
+      Javascript Libraries -->
+      <script src="js/js/main.js"></script>
+      <script src="js/jquery/jquery-migrate.min.js"></script>
+      <script src="js/jquery/jquery.min.js"></script>
+      <script src="js/easing/easing.min.js"></script>
+      <script src="js/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="js/mobile-nav/mobile-nav.js"></script>
+      <script src="js/wow/wow.min.js"></script>
+      <script src="js/waypoints/waypoints.min.js"></script>
+      <script src="js/counterup/counterup.min.js"></script>
+      <script src="js/owlcarousel/owl.carousel.min.js"></script>
+      <script src="js/isotope/isotope.pkgd.min.js"></script>
+      <script src="js/lightbox/js/lightbox.min.js"></script>
+
+
+
   </body>
 </html>
