--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Green PaperBag</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -50,6 +50,7 @@
       <script src="js/owlcarousel/owl.carousel.min.js"></script>
       <script src="js/isotope/isotope.pkgd.min.js"></script>
       <script src="js/lightbox/js/lightbox.min.js"></script>
+      <script src="js/contactform/contactform.js"></script>
 
 
 
