Changes made on the image folder

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,8 @@
       <script src="js/isotope/isotope.pkgd.min.js"></script>
       <script src="js/lightbox/js/lightbox.min.js"></script>
       <script src="js/contactform/contactform.js"></script>
-
+      <script src="js/js/style.js"></script>
+      
 
 
   </body>
